Installing pods & Initial project structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+# Pods
+Pods/*
+
+
 ## Build generated
 build/
 DerivedData/
@@ -16,6 +20,9 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+*~
+.DS_Store
+project.xcworkspace
 
 ## Other
 *.moved-aside
@@ -46,7 +53,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 
 # Carthage
 #
