Added location tracking and error handling

--- a/Weather Logger/Info.plist
+++ b/Weather Logger/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app logs your location to find out the weather in your city.</string>
 </dict>
 </plist>
